<resources>
    <string name="app_name">Finger Painter</string>
    <string name="color">Color</string>
    <string name="brush">Brush</string>
    <string name="save">Save</string>
    <string name="shape">Shape:</string>
    <string name="size">Size:</string>
    <string name="shapeToggle">Shape</string>
    <string name="square">Square</string>
    <string name="round">Round</string>
    <string name="choose_size">Choose size</string>
    <string name="choose_shape">Choose shape</string>
    <string name="color2">Color:</string>
    <string name="choose_color">Choose color</string>
    <string name="empty">0000</string>
</resources>
